--- a/templates/index.html
+++ b/templates/index.html
@@ -119,32 +119,58 @@
         <div class="utf_latest_news block color-red">
             <h3 class="utf_block_title"><span>Amakuru Mashya</span></h3>
             <div id="utf_latest_news_slide" class="owl-carousel owl-theme utf_latest_news_slide">
-                {% for post in amakurumashya|slice:":10" %}
-                <div class="item">
-                    <ul class="utf_list_post">
-                        <li class="clearfix">
-                            <div class="utf_post_block_style clearfix">
-                                <div class="utf_post_thumb"> <a href="#"><img class="img-fluid"
-                                            src="{{ post.thumbnail.url }}" style="height: 200px;" alt="{{ post.title }}"></a> </div>
-                                <a class="utf_post_cat"
-                                    href="{{ post.get_absolute_url }}">{{ post.category.name }}</a>
-                                <div class="utf_post_content">
-                                    <h2 class="utf_post_title title-medium"> <a
-                                            href="{{ post.get_absolute_url }}">{{ post.title|slice:":80" }}...</a> </h2>
-                                    <div class="utf_post_meta"> <span class="utf_post_author"><i class="fa fa-user"></i>
-                                            <a href="#">{{ post.author.username|title }}</a></span> <span
-                                            class="utf_post_date"><i
-                                                class="fa fa-clock-o"></i>{{ post.publish|naturalday }}</span> </div>
+                
+                {% if request|is_mobile %}
+                    {% for post in amakurumashya|slice:":5" %}
+                    <div class="item">
+                        <ul class="utf_list_post">
+                            <li class="clearfix">
+                                <div class="utf_post_block_style clearfix">
+                                    <div class="utf_post_thumb"> <a href="#"><img class="img-fluid"
+                                                src="{{ post.thumbnail.url }}" style="height: 200px;" alt="{{ post.title }}"></a> </div>
+                                    <a class="utf_post_cat"
+                                        href="{{ post.get_absolute_url }}">{{ post.category.name }}</a>
+                                    <div class="utf_post_content">
+                                        <h2 class="utf_post_title title-medium"> <a
+                                                href="{{ post.get_absolute_url }}">{{ post.title|slice:":80" }}...</a> </h2>
+                                        <div class="utf_post_meta"> <span class="utf_post_author"><i class="fa fa-user"></i>
+                                                <a href="#">{{ post.author.username|title }}</a></span> <span
+                                                class="utf_post_date"><i
+                                                    class="fa fa-clock-o"></i>{{ post.publish|naturalday }}</span> </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
+                            </li>
 
 
-                    </ul>
-                </div>
+                        </ul>
+                    </div>
 
-                {% endfor %}
+                    {% endfor %}
+                {% else %}
+                    {% for post in amakurumashya|slice:":10" %}
+                    <div class="item">
+                        <ul class="utf_list_post">
+                            <li class="clearfix">
+                                <div class="utf_post_block_style clearfix">
+                                    <div class="utf_post_thumb"> <a href="#"><img class="img-fluid"
+                                                src="{{ post.thumbnail.url }}" style="height: 200px;" alt="{{ post.title }}"></a> </div>
+                                    <a class="utf_post_cat"
+                                        href="{{ post.get_absolute_url }}">{{ post.category.name }}</a>
+                                    <div class="utf_post_content">
+                                        <h2 class="utf_post_title title-medium"> <a
+                                                href="{{ post.get_absolute_url }}">{{ post.title|slice:":80" }}...</a> </h2>
+                                        <div class="utf_post_meta"> <span class="utf_post_author"><i class="fa fa-user"></i>
+                                                <a href="#">{{ post.author.username|title }}</a></span> <span
+                                                class="utf_post_date"><i
+                                                    class="fa fa-clock-o"></i>{{ post.publish|naturalday }}</span> </div>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
 
+                    {% endfor %}
+                {% endif %}
 
             </div>
         </div>
