--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -169,12 +169,12 @@
               <div class="widget">
                 <h3 class="utf_block_title"><span>Dukurikire</span></h3>
                 <ul class="social-icon">
-                  <li><a href="#" target="_blank"><i class="fa fa-rss"></i></a></li>
-                  <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                  <li><a href="https://fb.me/byosehano/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="https://instagram.com/byosehano/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                  <li><a href="https://byosehano.com/feed" target="_blank"><i class="fa fa-rss"></i></a></li>
+                  <!--<li><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
                   <li><a href="#" target="_blank"><i class="fa fa-vimeo-square"></i></a></li>
-                  <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                  <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>-->
                 </ul>
               </div>
 
