--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -1,4 +1,4 @@
-<footer id="footer" class="footer">
+<!--<footer id="footer" class="footer">
     <div class="utf_footer_main">
         <div class="container">
             <div class="row">
@@ -8,7 +8,7 @@
                         <li>
                             Byose hano ni urubuga rukugezaho amakuru yizewe kandi kugihe dukurikire kuri website yacu cg kuzindi mbuga zikurikira.
                         </li>
-                        <li><i class="fa fa-envelope-o"></i> <a href="#">mail@example.com</a></li>
+                        <li><i class="fa fa-envelope-o"></i> <a href="#">byosehano@gmail.com</a></li>
                     </ul>
                     <ul class="unstyled utf_footer_social">
                         <li><a title="Facebook" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-</footer>
+</footer>-->
 <!-- Footer End -->
 
 <!-- Copyright Start -->
