--- a/templates/article_category.html
+++ b/templates/article_category.html
@@ -70,6 +70,7 @@
                             <li><a href="https://instagram.com/byosehano/" target="_blank"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://byosehano.com/feed" target="_blank"><i class="fa fa-rss"></i></a></li>
                         </ul>
+                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbyosehano%2F&tabs=pages&width=340&height=213&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="213" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                     </div>
 
                     <div class="widget color-default">
