--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -176,6 +176,7 @@
                   <li><a href="#" target="_blank"><i class="fa fa-vimeo-square"></i></a></li>
                   <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>-->
                 </ul>
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbyosehano%2F&tabs=pages&width=340&height=213&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="213" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
               </div>
 
               <div class="widget color-default">
@@ -207,22 +208,9 @@
               </div>
 
               <div class="widget m-bottom-0">
-                <h3 class="utf_block_title"><span>Dukurikire kuri Email</span></h3>
+                <h3 class="utf_block_title"><span>Like our Page</span></h3>
                 <div class="utf_newsletter_block">
-                  <div class="utf_newsletter_introtext">
-                      <h4>Injizamo Email Yawe</h4>
-                      <p>Horana amakuru mashya yacu winjiza email yawe hano</p>
-                  </div>
-                  <div class="utf_newsletter_form">
-                      <form action="#" method="post">
-                          <div class="form-group">
-                              <input type="email" name="email" id="utf_newsletter_form-email"
-                                  class="form-control form-control-lg" placeholder="E-Mail Address"
-                                  autocomplete="off">
-                              <button class="btn btn-primary">Injira</button>
-                          </div>
-                      </form>
-                  </div>
+                  <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbyosehano%2F&tabs=pages&width=340&height=213&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="213" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                 </div>
 
                 <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5f06beeccc9fba0019cdd26e&product=inline-reaction-buttons&cms=sop' async='async'></script>
