--- a/templates/article_category.html
+++ b/templates/article_category.html
@@ -72,7 +72,7 @@
                             <li><a href="https://instagram.com/byosehano/" target="_blank"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://byosehano.com/feed" target="_blank"><i class="fa fa-rss"></i></a></li>
                         </ul>
-                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbyosehano%2F&tabs=pages&width=340&height=213&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="213" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                       
                     </div>
 
                     <div class="widget color-default">
@@ -100,22 +100,9 @@
                     <div class="widget text-center"> <img class="banner img-fluid"
                             src="images/banner-ads/ad-sidebar.png" alt=""> </div>
                     <div class="widget m-bottom-0">
-                        <h3 class="utf_block_title"><span>Email yawe hano</span></h3>
+                        <h3 class="utf_block_title"><span>Dukurikire</span></h3>
                         <div class="utf_newsletter_block">
-                            <div class="utf_newsletter_introtext">
-                                <h4>Injira</h4>
-                                <p>Horana amakuru mashya yacu winjiza email yawe hano</p>
-                            </div>
-                            <div class="utf_newsletter_form">
-                                <form action="#" method="post">
-                                    <div class="form-group">
-                                        <input type="email" name="email" id="utf_newsletter_form-email"
-                                            class="form-control form-control-lg" placeholder="E-Mail Address"
-                                            autocomplete="off">
-                                        <button class="btn btn-primary">Injira</button>
-                                    </div>
-                                </form>
-                            </div>
+                            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbyosehano%2F&tabs=pages&width=340&height=213&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="213" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                         </div>
                     </div>
                 </div>
