--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,33 +5,35 @@
     <meta name="author" content="">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <!--Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'site.webmanifest' %}">
-    <link rel="mask-icon" href="{% static 'safari-pinned-tab.svg' %}" color="#e7851b">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://byosehano.com{% static 'apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://byosehano.com{% static 'favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://byosehano.com{% static 'favicon-16x16.png' %}">
+    <link rel="manifest" href="https://byosehano.com{% static 'site.webmanifest' %}">
+    <link rel="mask-icon" href="https://byosehano.com{% static 'safari-pinned-tab.svg' %}" color="#e7851b">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171717652-1"></script>
     <script data-ad-client="ca-pub-3242762948116825" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     {% block metadatas %}
       <!-- Primary Meta Tags -->
         <title>Amakuru - Menya byinshi kugihe</title>
         <meta name="title" content="Amakuru - Menya byinshi kugihe">
-        <meta name="description" content="Byosehano ni urubuga rukugezaaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
+        <meta name="description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://byosehano.com/">
         <meta property="og:title" content="Amakuru - Menya byinshi kugihe">
-        <meta property="og:description" content="Byosehano ni urubuga rukugezaaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
+        <meta property="og:description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
         <meta property="og:image" content="https://byosehano.com{% static 'apple-touch-icon.png' %}">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://byosehano.com/">
         <meta property="twitter:title" content="Amakuru - Menya byinshi kugihe">
-        <meta property="twitter:description" content="Byosehano ni urubuga rukugezaaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
+        <meta property="twitter:description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
         <meta property="twitter:image" content="https://byosehano.com{% static 'apple-touch-icon.png' %}">
     {% endblock metadatas %}
     <!-- CSS -->
@@ -67,7 +69,7 @@
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/custom.js' %}"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171717652-1"></script>
+        
         <script>
             window.dataLayer = window.dataLayer || [];
 
